# phase-engine

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
config/: phase-engine.toml.template
docs/: API_SPECIFICATION.md  CLIENT_INTEGRATION.md  GEOMETRY_MATH.md  PHASE_COHERENCE_ARCHITECTURE.md
scripts/: mock_radiod.py  plot_pattern.py  test_calibration.py  test_client_api.py  test_cluster.py  test_config.toml  test_engine.py  test_tlv_parity.py
src/phase_engine/: __init__.py  cli.py  config_loader.py  engine.py  sdnotify.py  virtual_channel.py
src/phase_engine/calibration/: __init__.py  sample_align.py  sources.py  terrestrial.py
src/phase_engine/client/: __init__.py  control.py  stream.py
src/phase_engine/combiner/: __init__.py  phase_combiner.py
src/phase_engine/control/: __init__.py  loop.py  radio_registry.py  server.py  tlv.py
src/phase_engine/data/: __init__.py  combiner.py  ring_buffer.py  rtp_packetizer.py
src/phase_engine/dsp/: __init__.py  alignment.py  array_geometry.py  calibration.py  combiner.py  plotter.py
src/phase_engine/sources/: __init__.py  broadcasts.py  radiod_source.py
systemd/: phase-engine.service
tests/: test_combiner.py  test_geometry.py
tools/: monitor_sources.py  snr_diagnostic.py
